update ibm link

--- a/sitedata/sponsors.yml
+++ b/sitedata/sponsors.yml
@@ -13,7 +13,7 @@
   level: Platinum
   logo: ibm.jpg
   logoontop: true
-  website: https://ibm.biz/ai-research
+  website: http://ibm-research-at-aaai-2021.mybluemix.net/
   description: |
     In our pursuit of fluid intelligence, we are continuing to advance our work in deep learning, and putting significant investment into neurosymbolic AI, which combines the power of neural networks with symbolic methods to help AI reason more effectively.
 
