--- a/sitedata/socials.yml
+++ b/sitedata/socials.yml
@@ -199,7 +199,7 @@
   website: http://www.diverseinai.com
   rocketchat_channel:
   location: takes place online
-  zoom_link: 
+  zoom_link: http://ksu.zoom.us/my/banazir
   sessions:
   - name: ""
     start_time: 2021-02-09 07:30:00-08:00
