Update zoom link of MH3

--- a/sitedata/tutorials.yml
+++ b/sitedata/tutorials.yml
@@ -273,12 +273,12 @@
   - name: MH3
     start_time: 2021-02-03 16:30:00+00:00
     end_time: 2021-02-03 19:45:00+00:00
-    zoom_link: https://zoom.us/j/93488082947?pwd=WTZXUytiVmRURnFRUkg5WlRQYjgwdz09
+    zoom_link: https://cmu.zoom.us/j/93384618008?pwd=cGU4enF2WUllZU5FaVhWQzc0ZjhJUT09
     hosts: Rayid Ghani, Pedro Saleiro and Kit Rodolfa
   - name: MH3
     start_time: 2021-02-03 16:30:00+00:00
     end_time: 2021-02-03 19:45:00+00:00
-    zoom_link: https://zoom.us/j/93488082947?pwd=WTZXUytiVmRURnFRUkg5WlRQYjgwdz09
+    zoom_link: https://cmu.zoom.us/j/93384618008?pwd=cGU4enF2WUllZU5FaVhWQzc0ZjhJUT09
     hosts: Rayid Ghani, Pedro Saleiro and Kit Rodolfa
   authors:
   - name: Rayid Ghani
