--- a/sitedata/sponsors.yml
+++ b/sitedata/sponsors.yml
@@ -11,7 +11,7 @@
   level: Platinum
   logo: ibm.jpg
   logoontop: true
-  website: https://ibm.biz/ai-research
+  website: https://ibm.biz/aaai2021
   description: |
     In our pursuit of fluid intelligence, we are continuing to advance our work in deep learning, and putting significant investment into neurosymbolic AI, which combines the power of neural networks with symbolic methods to help AI reason more effectively.
 
