--- a/sitedata/tutorials.yml
+++ b/sitedata/tutorials.yml
@@ -1577,7 +1577,7 @@
         to be continued
 
 - UID: FH-1
-  title:
+  title: 'Perception through Action and for Action'
   organizers: University of Pennsylvania
   info: |-
     to be continued
@@ -1629,7 +1629,7 @@
         to be continued
 
 - UID: FH-15
-  title:
+  title: 'Reinforcement Learning for Real Robots'
   organizers: Stanford University
   info: |-
     to be continued
@@ -1655,7 +1655,7 @@
         to be continued
 
 - UID: FH-16
-  title:
+  title: 'Distributive Justice for Machine Learning'
   organizers: Carnegie Mellon University
   info: |-
     to be continued
