Update vedio of tutorials
Update vedio of MH2

--- a/sitedata/tutorials.yml
+++ b/sitedata/tutorials.yml
@@ -250,7 +250,7 @@
       Institute. His research focuses on knowledge graphs and their applications,
       especially in social contexts such as fighting human trafficking and crisis
       response.
-  prerecorded: '38951741'
+  prerecorded:
 - UID: MH3
   title: 'Dealing with Bias and Fairness in Building AI Systems: A Practical Hands-on
     Tutorial'
